Fix flexbox issues when on mobile

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,15 +4,9 @@
   margin: 0px;
 }
 
-section {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-flow: column nowrap;
-}
-
 footer {
   background-color: rgba(66, 66, 66, 0.5);
+  border-top: 2px solid #707070;
   width: 100%;
   padding: 30px 0px;
   margin-top: 30px;
@@ -54,9 +48,5 @@ footer > ul > li {
     margin-left: 40px;
     align-items: flex-start;
     margin-bottom: 20px;
-  }
-
-  section {
-    padding: 0px 5px;
   }
 }
