--- a/src/app/display/display.component.css
+++ b/src/app/display/display.component.css
@@ -2,19 +2,28 @@
   box-sizing: border-box;
   margin: 0px;
   padding: 0px;
+  color: #424242;
+  font-size: 1.2rem;
 }
 
 :host {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-flow: column nowrap;
+  display: block;
+  margin: 0 auto;
+  width: 80%;
+  margin-top: 20px;
+  border-top: 2px solid #c9c9c9;
+}
+
+.center-content {
+  padding: 10px;
+  background-color: #f7f7f7;
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
 }
 
 .button-container {
   display: flex;
   justify-content: flex-end;
-  width: 80%;
+  width: 100%;
 }
 
 button {
@@ -42,6 +51,7 @@ img {
 }
 
 .header-text {
+  padding-top: 20px;
   display: block;
   width: 100%;
   font-weight: bold;
@@ -57,22 +67,10 @@ img {
 }
 
 p {
-  color: #424242;
-}
-
-p + p {
-  margin-left: 20px;
-}
-
-.center-content {
   display: flex;
-  flex-flow: column nowrap;
-  width: 80%;
-  padding: 20px;
-  margin-top: 20px;
-  border-top: 2px solid #c9c9c9;
-  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
-  background-color: #f7f7f7;
+  flex-flow: row wrap;
+  color: #424242;
+  min-width: 200px;
 }
 
 .content-container {
@@ -81,11 +79,11 @@ p + p {
 }
 
 .data-container {
-  margin: 20px;
   margin-bottom: 0px;
   display: flex;
+  padding-left: 20px;
   align-items: flex-start;
-  flex-flow: column nowrap;
+  flex-flow: column wrap;
 }
 
 .container {
@@ -95,6 +93,7 @@ p + p {
 
 .list {
   display: flex;
+  flex-flow: row wrap;
 }
 
 @media (max-width: 900px) {
@@ -104,21 +103,27 @@ p + p {
     align-items: center;
   }
 
-  .center-content {
-    width: 100%;
-  }
-
-  .data-container {
-    max-width: 500px;
-  }
-
   .movie-title {
-    display: flex;
     font-size: 2rem;
-    justify-content: center;
   }
 
   img {
     align-self: unset;
+  }
+}
+
+@media (max-width: 470px) {
+  .movie-title {
+    font-size: 1.5rem;
+    display: flex;
+    justify-content: center;
+  }
+
+  :host {
+    width: 96%;
+  }
+
+  .data-container {
+    padding-left: unset;
   }
 }
